<?xml version="1.0"?>
<package format="3">
  <name>demo_node</name>
  <version>0.0.1</version>
  <description>Demo minimal ROS2 node for FastAPI integration</description>
  <maintainer email="example@example.com">example</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
